sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: Missing closing brace `}' assumed here
  val n = getNombreValeurs()
  ^