sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() 
  {
  
  val n = getNombreValeurs()
var swapped=false
for (i<- 0 to n-2) {
  
  for (j<-0 to i-1) {
  if (!plusPetit(j,j+1)) {
    echange(j,j+1)
    swapped=true
  }
}
for (i<- 0 to n-2) {
  
  for (j<-0 to i-1) {
  if (!plusPetit(j,j+1)) {
    echange(j,j+1)
    swapped=true
  }
}
  if (!swapped) return
}
}